# SFMLRevolutionIsle

./: CMakeLists.txt  buildings.cpp  buildings.h  click.cpp  click.h  entities.cpp  entities.h  main.cpp  noise.cpp  noise.h  resources.cpp  resources.h  tiles.cpp  tiles.h  tools.cpp  tools.h  ui.cpp  ui.h
cmake_modules/: FindSFML.cmake
